5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1671_1105.log
== TEST (2019-04-24 14:45:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == lobo):
	casa = "Stark"
	print("Entrada: ",casa)
elif (x == leao):
	casa = "Lannister"
	print("Entrada: ",casa)
elif (x == viado):
	casa = "Baratheon"
	print("Entrada: ",casa)
elif (x == dragao):
	casa = "Targaryen"
	print("Entrada: ",casa)
elif (x == rosa):
	casa = "Tyrell"
	print("Entrada: ",casa)
elif (x == sol):
	casa = "Martell"
	print("Entrada: ",casa)
elif (x == lula):
	casa = "Greyjoy"
	print("Entrada: ",casa)
elif (x == esfolado):
	casa = "Bolton"
	print("Entrada: ",casa)
elif (x == turta):
	casa = Tully
	print("Entrada: ",casa)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:49:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == lobo):
	y = "Stark"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == leao):
	y = "Lannister"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == viado):
	y = "Baratheon"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == dragao):
	y = "Targaryen"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == rosa):
	y = "Tyrell"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == sol):
	y = "Martell"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == lula):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == esfolado):
	y = "Bolton"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == turta):
	y = Tully
	print("Entrada: ", x)
	print("casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:49:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == "lobo"):
	y = "Stark"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == leao):
	y = "Lannister"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == viado):
	y = "Baratheon"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == dragao):
	y = "Targaryen"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == rosa):
	y = "Tyrell"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == sol):
	y = "Martell"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == lula):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == esfolado):
	y = "Bolton"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == turta):
	y = Tully
	print("Entrada: ", x)
	print("casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif (x == leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:51:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == "lobo"):
	y = "Stark"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "leao"):
	y = "Lannister"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "viado"):
	y = "Baratheon"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "dragao"):
	y = "Targaryen"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "rosa"):
	y = "Tyrell"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "sol"):
	y = "Martell"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "lula"):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "esfolado"):
	y = "Bolton"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "turta"):
	y = "Tully"
	print("Entrada: ", x)
	print("casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:51:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == "lobo"):
	y = "Stark"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "leao"):
	y = "Lannister"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "viado"):
	y = "Baratheon"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "dragao"):
	y = "Targaryen"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "rosa"):
	y = "Tyrell"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "sol"):
	y = "Martell"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "lula"):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "esfolado"):
	y = "Bolton"
	print("Entrada: ", x)
	print("casa: ", y)
elif (x == "turta"):
	y = "Tully"
	print("Entrada: ", x)
	print("casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- EXECUTION TIME:
0.142415
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:54:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == "lobo"):
	y = "Stark"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "leao"):
	y = "Lannister"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "viado"):
	y = "Baratheon"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "dragao"):
	y = "Targaryen"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "rosa"):
	y = "Tyrell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "sol"):
	y = "Martell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "lula"):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "esfolado"):
	y = "Bolton"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "turta"):
	y = "Tully"
	print("Entrada: ", x)
	print("Casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:54:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == "lobo"):
	y = "Stark"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "leao"):
	y = "Lannister"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "viado"):
	y = "Baratheon"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "dragao"):
	y = "Targaryen"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "rosa"):
	y = "Tyrell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "sol"):
	y = "Martell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "lula"):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "esfolado"):
	y = "Bolton"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "turta"):
	y = "Tully"
	print("Entrada: ", x)
	print("Casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- EXECUTION TIME:
0.214759
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 21:18:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == "lobo"):
	y = "Stark"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "leao"):
	y = "Lannister"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "viado"):
	y = "Baratheon"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "dragao"):
	y = "Targaryen"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "rosa"):
	y = "Tyrell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "sol"):
	y = "Martell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "lula"):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "esfolado"):
	y = "Bolton"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "turta"):
	y = "Tully"
	print("Entrada: ", x)
	print("Casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 21:19:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == "lobo"):
	y = "Stark"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "leao"):
	y = "Lannister"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "viado"):
	y = "Baratheon"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "dragao"):
	y = "Targaryen"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "rosa"):
	y = "Tyrell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "sol"):
	y = "Martell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "lula"):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "esfolado"):
	y = "Bolton"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "turta"):
	y = "Tully"
	print("Entrada: ", x)
	print("Casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 21:19:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == "lobo"):
	y = "Stark"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "leao"):
	y = "Lannister"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "viado"):
	y = "Baratheon"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "dragao"):
	y = "Targaryen"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "rosa"):
	y = "Tyrell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "sol"):
	y = "Martell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "lula"):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "esfolado"):
	y = "Bolton"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "turta"):
	y = "Tully"
	print("Entrada: ", x)
	print("Casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 21:19:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:(lobo/leao/viado/dragao/rosa/sol/lula/esfolado/turta)")

if (x == "lobo"):
	y = "Stark"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "leao"):
	y = "Lannister"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "viado"):
	y = "Baratheon"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "dragao"):
	y = "Targaryen"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "rosa"):
	y = "Tyrell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "sol"):
	y = "Martell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "lula"):
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "esfolado"):
	y = "Bolton"
	print("Entrada: ", x)
	print("Casa: ", y)
elif (x == "turta"):
	y = "Tully"
	print("Entrada: ", x)
	print("Casa: ", y)
else:
	print("Entrada: ", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
